compiler/test-data/parser/blueprint/errors/unclosed_brace.frel
module blueprint.errors.unclosed_brace

import test.blueprint

blueprint Hello {
    text { "Hello" }
